--- a/components/canvas.html
+++ b/components/canvas.html
@@ -44,7 +44,7 @@
 
         <!--canvas container-->
         <div id="canvas-container" layout="row"  layout-align="center start" class="parent-size background-ottanio">
-            <canvas id="canvas-id" ng-init="loadFloor(true, true, true)" class="width-100"></canvas>
+            <canvas id="canvas-id" ng-init="" class="width-100"></canvas>
         </div>
         <!--end canvas container-->
 
