--- a/css/canvas.css
+++ b/css/canvas.css
@@ -29,7 +29,7 @@ md-toolbar{
 .canvas-floor{
     margin: 4px 0 0 0;
     padding-left: 2%;
-    float: right;
+    /*float: right;*/
     font-size: medium;
 }
 
