--- a/components/canvas.html
+++ b/components/canvas.html
@@ -36,8 +36,8 @@
         <div layout="row" layout-align="center center" class="background-ottanio width-100" style="padding-left: 3%;">
             <img src="../img/icons/login-icon.png" class="canvas-header-image" alt="Smart Track" title="Smart Track">
             <div class="margin-bottom-30-px width-30">
-                <p class="canvas-location color-darkcyan text-center">{{floorData.location | uppercase}}</p>
-                <p class="canvas-floor color-cyan text-center">{{floorData.defaultFloorName}}</p>
+                <p class="canvas-location color-darkcyan text-center">{{canvasCtrl.floorData.location.name | uppercase}}</p>
+                <p class="canvas-floor color-cyan text-center">{{canvasCtrl.floorData.defaultFloorName}}</p>
             </div>
         </div>
         <!--end header text-->
@@ -91,7 +91,7 @@
                                     <label>Selezione piano</label>
 
                                     <md-select ng-model="floorData.defaultFloorName">
-                                        <md-option ng-repeat="floor in floors" ng-value="floor.name">
+                                        <md-option ng-repeat="floor in canvasCtrl.floors" ng-value="floor.name">
                                             {{floor.name}}
                                         </md-option>
                                     </md-select>
@@ -101,7 +101,7 @@
                             <div id="change-grid-container" layout="column" class="padding-10-px">
 
                                 <div flex="100" layout layout-align="center center">
-                                    <md-subheader class="padding-0 width-100 zindex-0">Spaziatura griglia: <b>{{floorData.gridSpacing}}</b><md-subheader>
+                                    <md-subheader class="padding-0 width-100 zindex-0">Spaziatura griglia: <b>{{canvasCtrl.floorData.gridSpacing}}</b><md-subheader>
                                 </div>
 
                                 <md-slider-container flex="100">
@@ -114,11 +114,11 @@
                                 <div id="grid-on-off-container" layout="column" class="padding-10-px width-50" layout-align="center center">
 
                                     <div flex="100" layout layout-align="center center">
-                                        <md-subheader class="padding-0" ng-show="switch.showGrid">Griglia: <b class="color-green">ON</b></md-subheader>
-                                        <md-subheader class="padding-0" ng-show="!switch.showGrid">Griglia: <b class="color-red">OFF</b></md-subheader>
+                                        <md-subheader class="padding-0" ng-show="canvasCtrl.switch.showGrid">Griglia: <b class="color-green">ON</b></md-subheader>
+                                        <md-subheader class="padding-0" ng-show="!canvasCtrl.switch.showGrid">Griglia: <b class="color-red">OFF</b></md-subheader>
                                     </div>
 
-                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="Mostra/nascondi la griglia" ng-model="switch.showGrid">
+                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="Mostra/nascondi la griglia" ng-model="canvasCtrl.switch.showGrid">
                                     </md-switch>
                                 </div>
 
@@ -137,22 +137,22 @@
                                 <div id="anchors-on-off-container" layout="column" class="padding-10-px width-50" layout-align="center center">
 
                                     <div flex="100" layout layout-align="center center">
-                                        <md-subheader class="padding-0" ng-show="switch.showAnchors">Anchors: <b class="color-green">ON</b></md-subheader>
-                                        <md-subheader class="padding-0" ng-show="!switch.showAnchors">Anchors: <b class="color-red">OFF</b></md-subheader>
+                                        <md-subheader class="padding-0" ng-show="canvasCtrl.switch.showAnchors">Anchors: <b class="color-green">ON</b></md-subheader>
+                                        <md-subheader class="padding-0" ng-show="!canvasCtrl.switch.showAnchors">Anchors: <b class="color-red">OFF</b></md-subheader>
                                     </div>
 
-                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="Mostra/nascondi le telecamere" ng-model="switch.showAnchors">
+                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="Mostra/nascondi le telecamere" ng-model="canvasCtrl.switch.showAnchors">
                                     </md-switch>
                                 </div>
 
                                 <div id="cameras-on-off-container" layout="column" class="padding-10-px width-50" layout-align="center center">
 
                                     <div flex="100" layout layout-align="center center">
-                                        <md-subheader class="padding-0" ng-show="switch.showCameras">Cameras: <b class="color-green">ON</b></md-subheader>
-                                        <md-subheader class="padding-0" ng-show="!switch.showCameras">Cameras: <b class="color-red">OFF</b></md-subheader>
+                                        <md-subheader class="padding-0" ng-show="canvasCtrl.switch.showCameras">Cameras: <b class="color-green">ON</b></md-subheader>
+                                        <md-subheader class="padding-0" ng-show="!canvasCtrl.switch.showCameras">Cameras: <b class="color-red">OFF</b></md-subheader>
                                     </div>
 
-                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="Mostra/nascondi le telecamere" ng-model="switch.showCameras">
+                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged" md-no-ink aria-label="Mostra/nascondi le telecamere" ng-model="canvasCtrl.switch.showCameras">
                                     </md-switch>
                                 </div>
                             </div>
